# routes/v1/userRoute.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const router = express.Router();
+const { UserController } = require("../../controllers");
+
+router.post("/", UserController.createUser);
+router.get("/", UserController.getUsers);
+
+module.exports = router;
